# procdna

./: Cargo.toml  README.md
config/: agent.yaml  brain.yaml
crates/procdna-agent/: Cargo.toml
crates/procdna-agent/src/: main.rs
crates/procdna-brain/: Cargo.toml
crates/procdna-brain/src/: main.rs
crates/procdna-cli/: Cargo.toml
crates/procdna-cli/src/: main.rs
crates/procdna-common/: Cargo.toml
crates/procdna-common/src/: lib.rs
experiments/procdna-execve-lab/: .gitignore  Cargo.toml  README.md  requirements-docs.txt  rustfmt.toml
experiments/procdna-execve-lab/config/: procdna.systemd.yaml  procdna.yaml
experiments/procdna-execve-lab/data/: procdna.db  procdna.db-shm  procdna.db-wal
experiments/procdna-execve-lab/deploy/: install.sh  uninstall.sh
experiments/procdna-execve-lab/deploy/systemd/: procdna-agent.service
experiments/procdna-execve-lab/procdna-docs/: .gitignore.docs  README.md  copy-into-project.sh  mkdocs.yml
experiments/procdna-execve-lab/procdna-docs/docs/: ARCHITECTURE.md  DATA_MODEL.md  DEVELOPMENT.md  FUTURE_HARDENING.md  OPERATIONS.md  ROADMAP.md  THREAT_MODEL.md  index.md
experiments/procdna-execve-lab/procdna-docs/scripts/: create-docs-tree.sh  serve-docs.sh
experiments/procdna-execve-lab/procdna-execve-lab/: Cargo.toml  build.rs
experiments/procdna-execve-lab/procdna-execve-lab-common/: Cargo.toml
experiments/procdna-execve-lab/procdna-execve-lab-common/src/: lib.rs
experiments/procdna-execve-lab/procdna-execve-lab-ebpf/: Cargo.toml
experiments/procdna-execve-lab/procdna-execve-lab-ebpf/src/: main.rs
experiments/procdna-execve-lab/reports/: procdna-incident-1777748704-uid-1000.html  procdna-incident-1777751266-uid-1000.html  procdna-incident-1777751266-uid-1000.json  procdna-incident-1777752228-uid-1000.html  procdna-incident-1777752228-uid-1000.json  procdna-incident-1777752289-uid-1000.html  procdna-incident-1777752289-uid-1000.json  procdna-incident-1777752927-uid-1000.html  procdna-incident-1777752927-uid-1000.json  procdna-incident-1777753075-uid-1000.json  procdna-incident-1777755393-uid-1000.html  procdna-incident-1777755393-uid-1000.json  procdna-incident-1777755649-uid-1000.html  procdna-incident-1777755649-uid-1000.json  procdna-incident-1777759046-uid-1000.html  procdna-incident-1777759046-uid-1000.json  procdna-incident-1777759051-uid-1000.html  procdna-incident-1777759051-uid-1000.json
(+36 files in other folders)
