[workspace]
resolver = "2"
members = [
    "crates/procdna-common",
    "crates/procdna-agent",
    "crates/procdna-brain",
    "crates/procdna-cli"
]

[workspace.package]
edition = "2021"
version = "0.1.0"
authors = ["Erdem"]
license = "MIT"
repository = "https://github.com/erdem/procdna"
description = "AI-native process passport layer for Linux"

[workspace.dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
