[package]
name = "procdna-agent"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Lightweight Rust/eBPF agent for ProcDNA"

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
chrono.workspace = true
procdna-common = { path = "../procdna-common" }
