[package]
name = "procdna-brain"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Central local AI brain for ProcDNA"

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
reqwest.workspace = true
procdna-common = { path = "../procdna-common" }
